Bug 237626 - Moving contact across "vCards directory" adressbooks does not actually move the files
Summary: Moving contact across "vCards directory" adressbooks does not actually move t...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-14 15:53 UTC by Minh Ha Duong
Modified: 2010-05-16 12:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Minh Ha Duong 2010-05-14 15:53:14 UTC
Version:            (using KDE 4.4.2)
OS:                Linux
Installed from:    Ubuntu Packages

Hello,

System: Ubuntu 10.4

Situation: I store each contact in its own vCard file. There are three directories for Work, Familly and Friends. They were added using the kaddressbook File / New / Add an addressbook menu function. But this is a recent arrangement, so to cleanup my collection, I still have to sort my contacts into the right directories. I proceed by dragging a contact from the "Work" addressbook to the "Familly" addressbook (repeat n times, using also the "Friends" target). It works apparently. Even when I restart the kaddressbook and akonadi, the contacts stay where I put them.

Problem: The files are not actually moved, so when I reset the akonadi/kaddressbook setup (too often) my sorting is lost.

More justification: Segregating professional from personal contacts is important to me because of privacy worries at backup time. And the critical reason I use kontact, therefore kde is that it supports maildir, and I believe that one information item per file is the only sane way to go.

A workaround is probably to move the files directly. But this is inconvenient, because one has to cat each file to see its content. And should I ignore the WARNING_README.TXT in the vcards directories that says one should not do that ?

Thanks for your attention.
Comment 1 Tobias Koenig 2010-05-16 11:17:03 UTC
SVN commit 1127305 by tokoe:

Implement the move of items and collections correctly

BUG: 237626


 M  +24 -0     contactsresource.cpp  
 M  +6 -1      contactsresource.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1127305
Comment 2 Minh Ha Duong 2010-05-16 12:45:28 UTC
Dear Tobias,

I am very much impressed, I did not really expect the bug to be fixed so 
quickly. Congratulations and a thousand thanks !

Minh
---
Le dimanche 16 mai 2010 11:17:04, Tobias Koenig a écrit :
> https://bugs.kde.org/show_bug.cgi?id=237626
> 
> 
> Tobias Koenig <tokoe@kde.org> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - Status|UNCONFIRMED                 |RESOLVED
>          Resolution|                            |FIXED
> 
> 
> 
> 
> --- Comment #1 from Tobias Koenig <tokoe kde org>  2010-05-16 11:17:03 ---
> SVN commit 1127305 by tokoe:
> 
> Implement the move of items and collections correctly
> 
> BUG: 237626
> 
> 
>  M  +24 -0     contactsresource.cpp
>  M  +6 -1      contactsresource.h
> 
> 
> WebSVN link: http://websvn.kde.org/?view=rev&revision=1127305