Implement the move of items and collections correctly

BUG: 237626

svn path=/trunk/KDE/kdepim/runtime/; revision=1127305